testing safari overflow issues

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,6 +1,6 @@
 footer {
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.308);
+    background-color: rgba(31, 31, 31, 0.37);
     color: white;
     padding:5px;
     font-size: .8rem;
