--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
   font-size: 1rem;
   letter-spacing: 2.2px;
   -webkit-font-smoothing: antialiased;
-  background-color: rgb(238, 238, 238);
+  background-color: rgb(0, 0, 0);
   -moz-osx-font-smoothing: grayscale;
 }
 
